<resources>
    <string name="app_name">Calculator</string>
    <string name="calc_text"></string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_zero">0</string>
    <string name="divide_btn">/</string>
    <string name="multiply_button">*</string>
    <string name="sum_button">+</string>
    <string name="subtract_button">-</string>
    <string name="btn_clr">CLR</string>
    <string name="btn_equal">=</string>
    <string name = "btn_decimal">.</string>
</resources>