<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/grey_light"
            android:padding="10dp"
            android:textSize="48sp"
            android:text="@string/calc_text"
            android:gravity="end|bottom"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--Layout weight takes up entire available width-->

            <Button
                android:layout_margin="2dp"
                android:id="@+id/btn_seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_seven"
                android:onClick="onDigit"
                />
            <Button
                android:layout_margin="2dp"
                android:id="@+id/btn_eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_eight"
                android:onClick="onDigit"
                />
            <Button
                android:layout_margin="2dp"
                android:id="@+id/btn_nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_nine"
                android:onClick="onDigit"
                />

            <Button
                android:layout_margin="2dp"
                android:id="@+id/divide_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/divide_btn"
                android:onClick="onDigit"

                />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--Layout weight takes up entire available width-->

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btn_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_four"
            android:onClick="onDigit"

            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btn_five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_five"
            android:onClick="onDigit"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btn_six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_six"
            android:onClick="onDigit"
            />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/multiply_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiply_button"
            android:onClick="onDigit"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--Layout weight takes up entire available width-->

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btn_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_one"
            android:onClick="onDigit"

            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btn_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_two"
            android:onClick="onDigit"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btn_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_three"
            android:onClick="onDigit"
            />

    </LinearLayout>


</LinearLayout>